# fastenoughimg

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  api.html  benchmarks.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  usage.html
.github/workflows/: docs.yml  tests.yml
_sources/: index.md.txt  usage.md.txt
benchmarks/: benchmarks.py
docs/source/: api.md  benchmarks.md  conf.py
fastenoughimg/: __init__.py  fastenoughimg.pyx
src/: fastenoughimg.c  fastenoughimg.h
tests/: test_fimg.py
